--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,26 @@ contourpy==1.0.7
 cycler==0.11.0
 fonttools==4.38.0
 idna==3.4
+imageio==2.26.0
 joblib==1.2.0
 kiwisolver==1.4.4
+lazy_loader==0.1
 matplotlib==3.7.0
+networkx==3.0
 numpy==1.24.2
 opencv-python==4.7.0.72
 packaging==23.0
 Pillow==9.4.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+PyWavelets==1.4.1
 requests==2.28.2
+scikit-image==0.20.0
 scikit-learn==1.2.1
 scipy==1.10.1
 six==1.16.0
 threadpoolctl==3.1.0
+tifffile==2023.2.28
 torch==1.13.1
 torchaudio==0.13.1
 torchvision==0.14.1
